2001-08-28  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/classes/command.py (ScriptTest.fields): Make script
	field multiline.
	(ScriptTest.__init__): Test for empty string intepreter field.
	* tests/unit/test/classes/scripttest1.qmt: New test.
	* tests/unit/test/classes/scripttest2.qmt: Likewise.
	* tests/unit/test/classes/scripttest3.qmt: Likewise.
	* doc/manual/test-tour.xml: Fix typo.
	* doc/manual/test-reference.xml: Document some test classes. 

2001-08-28  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/base.py (ContextWrapper.items): Fix.
	* qm/test/cmdline.py (Command.__init__): Reformat.
	* qm/test/web/show.py (retrieve_attachment_data): Only process
	temporary attachments.
	* qm/test/classes/command.py (ExecTest.MakeEnvironment): Add
	context variables to environment.

2001-08-27  Alex Samuel  <samuel@codesourcery.com>

	* qm/setup_path.py.in (add_to_python_path): Prepend to path.

2001-08-22  Alex Samuel  <samuel@codesourcery.com>

	* qm.spec (files): Add qmtest-remote.

2001-08-22  Alex Samuel  <samuel@codesourcery.com>

	* install.py (scripts): Fix qmtest-remote script.

2001-08-22  Alex Samuel  <samuel@codesourcery.com>

	* qm/platform_win32.py (get_host_name): Fix syntax error.

2001-08-22  Alex Samuel  <samuel@codesourcery.com>

	* qm/test/xmldb.py (DirectorySuite.__ScanDirectory): Construct
	absolute test IDs.
	* qm/test/run.py (RemoteShellTarget.__init__): Use arguments
	property. 
	(TestRun.AddResourceResult): Immediately try to clean up after
	failed setup.
	* qm/test/cmdline.py (Command.commands_spec): Put ID in brackets.
	(Command.__ExecuteRun): Run all tests if none specified.  Collect
	explicit test suites.
	(Command.__WriteSummary): Print statistics by suite.  Supress null
	output. 
	* share/diagnostics/test.txt (no ids specified): Remove.
	* doc/qm.mod (PASS): New entity.
	(FAIL): Likewise.
	(ERROR): Likewise.
	(UNTESTED): Likewise.
	* doc/manual/test-manual.xml: Update and expand.
	* doc/manual/test-reference.xml: Likewise.