@@ -83,9 +83,11 @@ class ExecTest:
             here.  If omitted, the argument list is empty."""
             )),
             
-        qm.fields.AttachmentField(
+        qm.fields.TextField(
             name="stdin",
             title="Standard Input",
+            verbatim="true",
+            multiline="true",
             description="Text or data to pass to the program as standard "
             "input.  If omitted, the program's standard input is empty."
             ),
@@ -115,17 +117,21 @@ class ExecTest:
             "the program's exit code is not checked."
             ),
 
-        qm.fields.AttachmentField(
+        qm.fields.TextField(
             name="stdout",
             title="Expected Standard Output",
+            verbatim="true",
+            multiline="true",
             description="The expected text or data from the program's "
             "standard output stream.  If omitted, the program's standard " 
             "output is not checked."
             ),
         
-        qm.fields.AttachmentField(
+        qm.fields.TextField(
             name="stderr",
             title="Expected Standard Error",
+            verbatim="true",
+            multiline="true",
             description="The expected text or data from the program's "
             "standard error stream.  If omitted, the program's standard "
             "error is not checked."
@@ -196,11 +202,10 @@ class ExecTest:
             stderr_file_name, stderr_fd = qm.open_temporary_file_fd()
             # Write the standard input contents to a temporary file.
             stdin_file_name, stdin_fd = qm.open_temporary_file_fd()
-            if self.stdin is not None:
-                bytes_written = os.write(stdin_fd, self.stdin.GetData())
-                assert bytes_written == len(self.stdin)
-                # Rewind back to the beginning of the file.
-                os.lseek(stdin_fd, 0, 0)
+            bytes_written = os.write(stdin_fd, self.stdin)
+            assert bytes_written == len(self.stdin)
+            # Rewind back to the beginning of the file.
+            os.lseek(stdin_fd, 0, 0)
 
             # Create a pipe for communicating with the child process.
             # This pipe is used to communicate test results from the
@@ -288,24 +293,16 @@ class ExecTest:
                     exit_code = os.WEXITSTATUS(exit_status)
                 # Read the standard output generated by the program, if
                 # this test checks it.
-                if self.stdout is None:
-                    stdout = None
-                    expected_stdout = None
-                else:
-                    os.lseek(stdout_fd, 0, 0)
-                    stdout_file = os.fdopen(stdout_fd, "w+b")
-                    stdout = stdout_file.read()
-                    expected_stdout = self.stdout.GetData()
+                os.lseek(stdout_fd, 0, 0)
+                stdout_file = os.fdopen(stdout_fd, "w+b")
+                stdout = stdout_file.read()
+                expected_stdout = self.stdout
                 # Read the standard error generated by the program, if
                 # this test checks it.
-                if self.stderr is None:
-                    stderr = None
-                    expected_stderr = None
-                else:
-                    os.lseek(stderr_fd, 0, 0)
-                    stderr_file = os.fdopen(stderr_fd, "w+b")
-                    stderr = stderr_file.read()
-                    expected_stderr = self.stderr.GetData()
+                os.lseek(stderr_fd, 0, 0)
+                stderr_file = os.fdopen(stderr_fd, "w+b")
+                stderr = stderr_file.read()
+                expected_stderr = self.stderr
                 # Do the target program's outputs match expectations?
                 if exit_code == self.exit_code \
                    and stdout == expected_stdout \
