@@ -6,13 +6,13 @@
   <integer>0</integer>
  </argument>
  <argument name='stdin'>
-  <attachment/>
+  <text/>
  </argument>
  <argument name='interpreter'>
   <text/>
  </argument>
  <argument name='stdout'>
-  <attachment/>
+  <text/>
  </argument>
  <argument name='script'>
   <text># Make sure the "PATH" environment variable is set correctly.
@@ -20,7 +20,7 @@ test "${PATH}" = "${QMV_path}"
 </text>
  </argument>
  <argument name='stderr'>
-  <attachment/>
+  <text/>
  </argument>
  <argument name='arguments'>
   <set/>
